[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/dialogs/SoundDialog.gd" type="Script" id=1]

[node name="SoundDialog" type="PopupDialog"]
margin_right = 447.0
margin_bottom = 519.0
input_pass_on_modal_close_click = false
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 447.0
margin_bottom = 55.0
text = "Bass, column 0"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 59.0
margin_right = 447.0
margin_bottom = 61.0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 65.0
margin_right = 447.0
margin_bottom = 445.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 447.0
size_flags_horizontal = 3

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 449.0
margin_right = 447.0
margin_bottom = 455.0
custom_constants/separation = 6

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 459.0
margin_right = 447.0
margin_bottom = 519.0
rect_min_size = Vector2( 0, 25 )
size_flags_horizontal = 3
custom_constants/separation = 20
alignment = 1

[node name="OkButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 100.0
margin_bottom = 60.0
rect_min_size = Vector2( 100, 60 )
text = "OK"

[node name="ClearButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 120.0
margin_right = 265.0
margin_bottom = 60.0
rect_min_size = Vector2( 100, 60 )
text = "BTN_CLEAR"

[node name="CancelButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 285.0
margin_right = 447.0
margin_bottom = 60.0
rect_min_size = Vector2( 100, 60 )
text = "BTN_CANCEL"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="VBoxContainer/HBoxContainer/OkButton" to="." method="_on_OkButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ClearButton" to="." method="_on_ClearButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
